# streamn-scoreboard

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SECURITY.md  plan.md
.github/workflows/: build.yml  release.yml
cmake/: check-plugin-binary.cmake.in
data/: manifest.json.in  streamn-dad-logo.h
include/: obsconfig.h  scoreboard-core.h  scoreboard-dock.h
scripts/: build.sh  check-plugin-log.sh  configure.sh  coverage.sh  dev-setup-macos.sh  find-obs-dev-paths.sh  install-dev-plugin.sh  package-macos.sh  run-obs.sh  test.sh
src/: plugin-dock.cpp  plugin-main.c  plugin-version.h.in  scoreboard-core.c
tests/: test-scoreboard-core-events.c  test-scoreboard-core-penalties.c  test-scoreboard-core-persistence.c  test-scoreboard-core-scoring.c  test-scoreboard-core-sport.c  test-scoreboard-core.c
